Updated Grid and commented it

--- a/resources/scss/_grid.scss
+++ b/resources/scss/_grid.scss
@@ -3,6 +3,12 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
+// Starts background color from content;
+// * { 
+//     -webkit-background-clip: content;
+//     background-clip: content;
+// }
+
 
 /******************************/
 /*        Grid context        */
