--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,56 @@
-*, *:before, *:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+/*
+Error: File to import not found or unreadable: butons.
+        on line 5 of style.scss
 
-/******************************/
-/*        Grid context        */
-/******************************/
-/******************************/
-/*        Columns             */
-/******************************/
+1: @import "grid";
+2: @import "typography";
+3: @import "Colors";
+4: @import "links";
+5: @import "butons";
+6: @import "icons";
+
+Backtrace:
+style.scss:5
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/import_node.rb:67:in `rescue in import'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/import_node.rb:45:in `import'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/import_node.rb:28:in `imported_file'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/import_node.rb:37:in `css_import?'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:311:in `visit_import'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/stack.rb:79:in `block in with_base'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/stack.rb:115:in `with_frame'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/stack.rb:79:in `with_base'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:158:in `visit'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:52:in `map'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:52:in `visit_children'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:36:in `block in visit'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:36:in `visit'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:157:in `visit'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:8:in `visit'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/root_node.rb:36:in `css_tree'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/engine.rb:378:in `_render_with_sourcemap'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/engine.rb:295:in `render_with_sourcemap'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:490:in `update_stylesheet'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:209:in `each'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:328:in `block in watch'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/vendor/listen/lib/listen/listener.rb:252:in `call'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/vendor/listen/lib/listen/listener.rb:252:in `on_change'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
+/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Error: File to import not found or unreadable: butons.\A         on line 5 of style.scss\A \A 1: @import \"grid\";\A 2: @import \"typography\";\A 3: @import \"Colors\";\A 4: @import \"links\";\A 5: @import \"butons\";\A 6: @import \"icons\";"; }
