added main styles for header section

--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -1,8 +1,4 @@
-@import "grid";
-@import "typography";
-@import "Colors";
-@import "links";
-@import "butons";
-@import "icons";
+@import "all";
+
 
 
