--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,56 +1,94 @@
-/*
-Error: File to import not found or unreadable: butons.
-        on line 5 of style.scss
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
-1: @import "grid";
-2: @import "typography";
-3: @import "Colors";
-4: @import "links";
-5: @import "butons";
-6: @import "icons";
+/******************************/
+/*        Grid context        */
+/******************************/
+/******************************/
+/*        Columns             */
+/******************************/
+body {
+  color: #7F8C8D;
+  font-family: 'lato', Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  text-rendering: optimizeLegibility; }
 
-Backtrace:
-style.scss:5
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/import_node.rb:67:in `rescue in import'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/import_node.rb:45:in `import'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/import_node.rb:28:in `imported_file'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/import_node.rb:37:in `css_import?'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:311:in `visit_import'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/stack.rb:79:in `block in with_base'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/stack.rb:115:in `with_frame'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/stack.rb:79:in `with_base'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:52:in `map'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/engine.rb:378:in `_render_with_sourcemap'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/engine.rb:295:in `render_with_sourcemap'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:490:in `update_stylesheet'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:209:in `each'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:470:in `on_file_changed'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:328:in `block in watch'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/Users/andresgarcia/.rvm/gems/ruby-2.2.0@global/gems/sass-3.4.19/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: File to import not found or unreadable: butons.\A         on line 5 of style.scss\A \A 1: @import \"grid\";\A 2: @import \"typography\";\A 3: @import \"Colors\";\A 4: @import \"links\";\A 5: @import \"butons\";\A 6: @import \"icons\";"; }
+h1,
+h2,
+h3,
+h4,
+h5 {
+  text-transform: uppercase; }
+
+h1 {
+  font-size: 4rem;
+  color: #fff;
+  line-height: 110%;
+  word-spacing: 3px; }
+
+.main-nav li a:link, .main-nav li a:visited {
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1.15rem;
+  padding: 5px 0;
+  border-bottom: 3px solid transparent;
+  transition: border-bottom 0.2s; }
+.main-nav li a:hover, .main-nav li a:active {
+  border-bottom: 3px solid #EF3E3E; }
+
+header {
+  background: -webkit-linear-gradient(right, #34495E, rgba(52, 73, 94, 0.9)), url("../img/hero.jpg") no-repeat;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  padding: 1rem; }
+  header nav {
+    /* Only needed if you don't use a reset stylesheet. */
+    margin: 0;
+    padding: 0;
+    /* The clearfix */
+    /* Add the padding and float the columns left */ }
+    header nav::after {
+      content: "";
+      display: table;
+      clear: both; }
+    header nav > * {
+      padding: .25rem;
+      float: left; }
+    header nav .logo {
+      display: inline-block;
+      height: 60px;
+      width: auto;
+      float: left; }
+    header nav .main-nav {
+      float: right;
+      list-style: none;
+      margin-top: 20px; }
+      header nav .main-nav li {
+        display: inline-block;
+        margin-left: 40px; }
+  header .hero-text-box {
+    position: absolute;
+    width: 70%;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); }
+  header .scroll {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    text-align: center;
+    display: inline-block; }
+    header .scroll img {
+      height: 60px;
+      width: auto;
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+      border-radius: 20px; }
+
+/*# sourceMappingURL=style.css.map */
