--- a/resources/scss/_links.scss
+++ b/resources/scss/_links.scss
@@ -1,4 +1,19 @@
+.main-nav li {
 
-body {
-  background: red;
+  & a:link, 
+  & a:visited {
+    color: $white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1.15rem;
+    padding: 5px 0;
+    border-bottom: 3px solid transparent;
+    transition: border-bottom 0.2s;
+  }
+
+  & a:hover,
+  & a:active {
+    border-bottom: 3px solid $main-red;
+  }
+  
 }
