--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,8 +45,7 @@ header {
   height: 100vh;
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
-  padding: 1rem; }
+  background-attachment: fixed; }
   header nav {
     /* Only needed if you don't use a reset stylesheet. */
     margin: 0;
@@ -58,7 +57,7 @@ header {
       display: table;
       clear: both; }
     header nav > * {
-      padding: .25rem;
+      padding: 2rem;
       float: left; }
     header nav .logo {
       display: inline-block;
@@ -82,13 +81,44 @@ header {
   header .scroll {
     position: absolute;
     bottom: 20px;
-    width: 100%;
     text-align: center;
-    display: inline-block; }
+    display: inline-block;
+    text-align: center;
+    width: 100%; }
     header .scroll img {
       height: 60px;
       width: auto;
       box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-      border-radius: 20px; }
+      border-radius: 20px;
+      overflow: hidden; }
+
+.about-section .split-layout {
+  /* Only needed if you don't use a reset stylesheet. */
+  margin: 0;
+  padding: 0;
+  /* The clearfix */
+  /* Add the padding and float the columns left */ }
+  .about-section .split-layout::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .about-section .split-layout > * {
+    padding: 2rem;
+    float: left; }
+  .about-section .split-layout .side {
+    width: 50%;
+    height: 100vh;
+    position: relative; }
+    .about-section .split-layout .side .intro-content {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      text-align: center; }
+  .about-section .split-layout .side-left {
+    background: #34495E; }
+  .about-section .split-layout .side-right {
+    background: #EF3E3E; }
 
 /*# sourceMappingURL=style.css.map */
