--- a/resources/scss/_grid.scss
+++ b/resources/scss/_grid.scss
@@ -26,7 +26,7 @@
     }
     /* Add the padding and float the columns left */
     & > * {
-        padding: .25rem;
+        padding: 2rem;
         float: left;
     }
 }
