--- a/resources/scss/_header.scss
+++ b/resources/scss/_header.scss
@@ -4,7 +4,7 @@ header {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  padding: 1rem;
+  
 
     nav {
       @include grid;
@@ -43,15 +43,17 @@ header {
     .scroll {
       position: absolute;
       bottom: 20px;
-      width: 100%;
       text-align: center;
       display: inline-block;
+      text-align: center;
+      width: 100%;
 
       & img {
         height: 60px;
         width: auto;
         box-shadow: 0px 0px 20px rgba(0,0,0,.5);
         border-radius: 20px;
+        overflow: hidden
       }
     }
 
