--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,13 +21,24 @@ h2,
 h3,
 h4,
 h5 {
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  color: #fff; }
 
 h1 {
   font-size: 4rem;
-  color: #fff;
   line-height: 110%;
   word-spacing: 3px; }
+
+h2 {
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 100%; }
+
+.intro-content h2 {
+  text-transform: capitalize; }
+  .intro-content h2 span:last-child {
+    font-size: 1.2rem;
+    font-weight: 300; }
 
 .main-nav li a:link, .main-nav li a:visited {
   color: #fff;
@@ -42,6 +53,7 @@ h1 {
 
 header {
   background: -webkit-linear-gradient(right, #34495E, rgba(52, 73, 94, 0.9)), url("../img/hero.jpg") no-repeat;
+  background: -moz-linear-gradient(right, #34495E, rgba(52, 73, 94, 0.9)), url("../img/hero.jpg") no-repeat;
   height: 100vh;
   background-size: cover;
   background-position: center;
@@ -113,9 +125,31 @@ header {
       position: absolute;
       top: 50%;
       left: 50%;
+      text-align: center;
       -webkit-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-      text-align: center; }
+      transform: translate(-50%, -50%); }
+      .about-section .split-layout .side .intro-content .profile > img {
+        max-width: 100%;
+        border-radius: 50%;
+        opacity: .6; }
+      .about-section .split-layout .side .intro-content h2 {
+        margin-top: 0.67em;
+        margin-bottom: 0.67em; }
+        .about-section .split-layout .side .intro-content h2 span {
+          display: block;
+          white-space: nowrap; }
+          .about-section .split-layout .side .intro-content h2 span:nth-child(2) {
+            position: relative;
+            padding: .5rem;
+            margin-top: .8em; }
+            .about-section .split-layout .side .intro-content h2 span:nth-child(2):nth-child(2):before {
+              position: absolute;
+              top: 0;
+              left: 25%;
+              width: 50%;
+              height: 2px;
+              background: #fff;
+              content: ""; }
   .about-section .split-layout .side-left {
     background: #34495E; }
   .about-section .split-layout .side-right {
