--- a/resources/scss/_typography.scss
+++ b/resources/scss/_typography.scss
@@ -14,11 +14,35 @@ h3,
 h4,
 h5, {
   text-transform: uppercase;
+  color: $white;
 }
 
 h1 {
   font-size: 4rem;
-  color: $white;
   line-height: 110%;
   word-spacing: 3px;
 }
+
+h2 { 
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+
+
+//About Section
+
+
+.intro-content h2 {
+  text-transform: capitalize;
+  
+  & span { 
+    &:last-child {
+      font-size: 1.2rem;
+      font-weight: 300;
+      
+    }
+  }
+}
+
