--- a/resources/scss/_colors.scss
+++ b/resources/scss/_colors.scss
@@ -2,6 +2,7 @@
 $main-red: #EF3E3E; 
 $secondary-red: #E35D5B; 
 $main-blue: #34495E;
+$secondary-blue: #3B6C9C;
 $main-silver: #7F8C8D;
 $white: #fff;
 
