--- a/resources/scss/_typography.scss
+++ b/resources/scss/_typography.scss
@@ -29,6 +29,16 @@ h2 {
   line-height: 100%;
 }
 
+// h3 {
+
+// }
+
+p {
+  font-size: 1.2rem;
+  font-weight: 300;
+  line-height: 150%;
+}
+
 
 
 //About Section
@@ -44,5 +54,11 @@ h2 {
       
     }
   }
+}
+
+.page-inner h2 {
+  margin: 0 0 1em 0;
+  font-weight: 300;
+  font-size: 2.4em;
 }
 
